# dev-challenge-natix-io

./: .gitignore  ANSWERS.md
weather-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
weather-service/app/: config.py  main.py
weather-service/app/api/: routes.py
weather-service/app/api/v1/: __init__.py  crud.py  routes.py
weather-service/app/api/v2/: __init__.py  crud.py  routes.py
weather-service/app/background/: cache_warmer.py
weather-service/app/definitions/: data_sources.py
weather-service/app/exceptions/: __init__.py  common.py
weather-service/app/middleware/: dependency_container.py  request_id.py  request_tracker.py
weather-service/app/models/: responses.py  weather.py
weather-service/app/schemas/: api_v1.py  api_v2.py  common.py
weather-service/app/services/: __init__.py  cache_service.py  dummy_external_api.py  external_api.py  queue_service.py  rate_limit_service.py  request_stats_service.py  weather_cache_service.py  weather_service.py
weather-service/app/utils/: circuit_breaker.py  dependencies.py  logger.py  resilience.py
weather-service/tests/: README.md  conftest.py  test_config.py  test_main.py
weather-service/tests/background/: test_cache_warmer.py
weather-service/tests/services/: test_dummy_external_api.py  test_queue_service.py  test_rate_limit_service.py  test_request_stats_service.py  test_weather_cache_service.py  test_weather_service.py
weather-service/tests/utils/: test_circuit_breaker.py  test_resilience.py
