[tool.poetry]
name = "weather-service"
version = "1.0.0"
description = "A resilient weather service API with intelligent caching and rate limiting"
authors = ["Volodymyr Zontov <zontovv@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
redis = "^5.0.1"
httpx = "^0.26.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
prometheus-fastapi-instrumentator = "^6.1.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.0"
pylint = "^3.0.3"
fakeredis = "^2.20.1"
respx = "^0.20.2"
dill = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pylint.format]
max-line-length = 88